# fwi-rtm-illumination-diagnostics

./: .gitattributes  .gitignore  PUSH_TO_GITHUB.md  README.md  RELEASE_MANIFEST.md
fwi_visionfm/: README.md  __init__.py  audit_cross_family_results.py  bridge.py  build_stage_report.py  calibration.py  cli.py  config.py  convert_openfwi.py  convert_openfwi_multi.py  data_conversion.py  datasets.py  evaluate_existing_checkpoints.py  evaluate_foundation_checkpoint.py  experiment.py  foundation_models.py  foundation_registry.py  foundation_train.py  generate_prediction_examples.py  index_results.py  losses.py  make_cross_family_split.py  make_split_manifest.py  make_target_test_protocol.py  metrics.py  models.py  optional_deps.py  peft.py  physics.py  pipeline.py  plot_protocol_comparison.py  pyproject.toml  run_experiment.py  run_experiment_matrix.py  run_foundation_experiment.py  shape_utils.py  split_utils.py  summarize_cross_family.py  summarize_experiments.py  summarize_protocol_v1.py  (+3 more)
fwi_visionfm/bridges/: envelope_bridge.py  raw_bridge.py  raw_offset_bridge.py  registry.py  spectrogram_bridge.py
fwi_visionfm/configs/: linear_baseline_example.json  local_foundation_models.yaml  pasd_phase1b_locked_config.json  pasd_phase3_pasd_core_locked.json  protocol_v11_visionfm_crossfamily.yaml  protocol_v12_spectrogram_dinov2_confirmation.yaml  protocol_v13_natural_vs_seismic_pretraining.yaml  protocol_v14_geometry_aware_trace_bridge.yaml
fwi_visionfm/data/: __init__.py  boundary_targets.py  bridge_registry.py  build_openfwi_index.py  compute_openfwi_stats.py  (+3 more)
(+808 files in other folders)
