[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fwi-visionfm-pasd-extension"
version = "0.2.0"
description = "PASD-FWI protocol extension for fwi_visionfm"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "torch>=2.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
